7-14-2015 : v0.4
  - converted JNA code to JNI
  - Windows Desktop Sharing is now configured to listen on port 33002
    - the port redir is no longer required (which makes it faster)
  - server/client combined into one MSI package

5-23-2015 : v0.3
  - client : added smart sizing button
  - server : was only allowing a few connections
  - client : remembers last host
  - config files renamed

4-20-2015 : v0.2
  - improved client connection
  - added admin password
  - passwords now encoded in cfg

3-19-2015 : v0.1
  - first public release