@@ -1,7 +1,7 @@
 What's new...
 
 Jul ?/2015 : JF 9.5.0 released!
-  - Window native launcher can now download Java if not found
+  - Windows native launcher can now download Java if not found
   - jfRDP/0.4 released!
     - jfRDP is back
     - now uses more native code, the RDP server port is no longer redirected and the client window is pure native.
